--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   7z2407-src.tar.xz: daf5314f6e279c8a8bd5848079bdece0529686ad
+  7z2408-src.tar.xz: 9003f3ae9a4e92bb0435a30b4740ecda9aa0ebf9
